cambios de la profe

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 :root{
     /*Colores*/
-    --dark-blue:#022e4b;
-    --mid-blue:#185e8d;
-    --light-blue:hsl(204, 71%, 57%);
-    --dark-black:#17191a;
+    --dark-blue:#024b39;
+    --mid-blue:#188d7a;
+    --light-blue:hsl(157, 71%, 57%);
+    --dark-black:#171a1a;
     --mid-black:#313233;
     --grey:#e0e5e9;
     
